[tool.poetry]
name = "jutils"
version = "0.1.1"
description = "Provide convenient JAX usage for personal purposes."
authors = ["Ziqin Gong <gongzq0301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
jax = ">=0.4.11"
chex = ">=0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
